Added the ability to exclude articles that are accessible only to paying subscribers.